# MixView

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TMIX-X32_cuechangeOSC.txt
assets/: abridged_x32_osc_dictionary.txt  mixview.icns
include/: oscpack.cmake
src/: ChannelStrip.cpp  ChannelStrip.h  Fader.h  IPAddressBox.cpp  IPAddressBox.h  MainComponent.cpp  MainComponent.h  MessageProcessor.cpp  MessageProcessor.h  OSCConnect.cpp  OSCConnect.h  Receiver.cpp  Receiver.h  Subscriber.cpp  Subscriber.h  TMixProcessor.cpp  TMixProcessor.h  X32Connect.cpp  X32Connect.h  faderValueMap.cpp  faderValueMap.h  macros.h  main.cpp
src/gui/: AssignmentsPopout.cpp  AssignmentsPopout.h  ChannelState.h  DeviceState.cpp  DeviceState.h  Fader.cpp  Fader.h  InfoBar.cpp  InfoBar.h  ScribbleStrip.cpp  ScribbleStrip.h  State.h  StripView.h  TMixView.h
